fix(style): fix billboard__forward text align issue

--- a/client/stylesheets/components/_billboard.scss
+++ b/client/stylesheets/components/_billboard.scss
@@ -143,6 +143,7 @@
       display: inline-block;
       bottom : r(1);
       outline: none;
+      text-align: center;
       @include scut-center-transform(x);
     }
   }
